# Laboratorio10

./: CMakeLists.txt  ejercicios.cpp  ejercicios.h
tests/: buscarTEST.cpp
